support mini score fitler on query
